ändring av skript

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "rest-webbtjanst",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
+"scripts": {
+  "dev": "nodemon server.js",
+  "start": "node server.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
